Updating details with information

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello I am claritza medina and I'm currently pursuing a career in the art indrustry as I have interest in concept art and illustrations for games</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Orlando Florida</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Art and video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creating conecpt art and illustrations of my ideas</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because it is a good skill to have and would help me greatly with my work as I would like to be able to create websites and have knowlege of coding as it may help in the long run.</p>
     </section>
 
     <footer id="footer">
